--- a/trabalho de pw/index.html
+++ b/trabalho de pw/index.html
@@ -103,20 +103,20 @@
       <div class="row">
         <div class="col">
           <figure class="figure">
-            <img src="img/3 figueras/18.png" class="figure-img img-fluid rounded" alt="..." width="300" height="300">
-            <figcaption class="figure-caption" style="position: absolute; left: 28.2em;"><strong>Inportante!!!</strong></figcaption>
+            <img src="img/3 figueras/18.png" class="figure-img img-fluid rounded" alt="..." width="400" height="400">
+            <figcaption class="figure-caption" ><strong>IMPORTANTE</strong></figcaption>
           </figure>
         </div>
         <div class="col">
-          <figure class="figure" style="text-align: center; " >
-            <img src="img/3 figueras/figure 2.jpeg" class="figure-img img-fluid rounded" id="img" alt="..." width="300" height="300">
-            <figcaption class="figure-caption" style="position: absolute; left: 870px;"><strong>Inportante!!!</strong></figcaption>
+          <figure class="figure"  >
+            <img src="img/3 figueras/figure 2.jpeg" class="figure-img img-fluid rounded" id="img" alt="..." width="400" height="400">
+            <figcaption class="figure-caption" ><strong>IMPORTANTE</strong></figcaption>
           </figure>
         </div>
         <div class="col">
-          <figure class="figure" style="float: right;">
-            <img src="img/3 figueras/badlanguage.jpg " class="figure-img img-fluid rounded " alt="..." width="300" height="300" >
-            <figcaption class="figure-caption" style="position: absolute; right: 420px;"><strong>Inportante!!!</strong></figcaption>
+          <figure class="figure">
+            <img src="img/3 figueras/badlanguage.jpg " class="figure-img img-fluid rounded " alt="..." width="400" height="400" >
+            <figcaption class="figure-caption"><strong>IMPORTANTE</strong></figcaption>
           </figure>
         </div>
       </div>
